# ProjecteWeb

./: .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  run_behave_tests.py
djangoProject/: settings.py  urls.py
features/: environment.py  recipe.feature
features/steps/: recipe_steps.py
templates/: base.html  collection.html  inici.html  login.html  profile.html  receptes.html  register.html
web/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
web/migrations/: 0001_initial.py  0002_alter_ingredient_ingredient_amount_and_more.py  0002_recipe_created_by_recipe_imatge.py  0002_remove_recipe_ingredients_recipe_ingredients.py  0003_alter_profile_email.py  0004_remove_profile_email_remove_profile_name.py  0005_savedrecipe.py
web/static/: style.css
web/templates/: base.html  collection.html  create_recipe.html  edit_recipe.html  error.html  home.html  login.html  logout.html  profile.html  recepies.html  recipe_detail.html  recipes.html  register.html  search.html
