[project]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ednasolans",email = "edna.solans@gmail.com "}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.8,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
